--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="">
+        <a class="logo" href="../../index.html">
             <p class="logo-title">online</p>
             <div class="logo-container">
                 <p class="logo-title">Z</p>
@@ -18,10 +19,10 @@
             </div>
         </a>
         <nav class="nav">
-            <a href="" class="nav-link">About</a>
+            <a href="../../index.html" class="nav-link">About</a>
             <a href="" class="nav-link">Map</a>
-            <a href="" class="nav-link">Zoos</a>
-            <a href="" class="nav-link">Contact us</a>
+            <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
+            <button class="nav-link" id="nav-button">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="header-container">
@@ -35,16 +36,16 @@
         <h2 class="map-title">Choose your favorite Animal</h2>
         <div class="map-container">
             <img class="map-image" src="../../assets/images/Map.png" alt="Map">
-            <a href="" class="map-card map-card-1">
+            <a href="../zoos-eagles/index.html" class="map-card map-card-1">
                 <img class="map-card__img" src="../../assets/images/eagles.png" alt="">
             </a>
-            <a href="" class="map-card map-card-2">
+            <a href="../zoos-alligators/index.html" class="map-card map-card-2">
                 <img class="map-card__img" src="../../assets/images/aligators.png" alt="">
             </a>
-            <a href="" class="map-card map-card-3">
+            <a href="../zoos-gorillas/index.html" class="map-card map-card-3">
                 <img class="map-card__img" src="../../assets/images/gorrilas.png" alt="">
             </a>
-            <a href="" class="map-card map-card-4">
+            <a href="../zoos-pandas/index.html" class="map-card map-card-4">
                 <img class="map-card__img" src="../../assets/images/Pandas.png" alt="">
             </a>
         </div>
@@ -58,7 +59,7 @@
         </div>
     </section>
     <footer class="footer">
-        <a class="logo" href="">
+        <a class="logo" href="../../index.html">
             <p class="logo-title">online</p>
             <div class="logo-container">
                 <p class="logo-title">Z</p>
@@ -66,10 +67,10 @@
             </div>
         </a>
         <nav class="nav">
-            <a href="" class="nav-link">About</a>
+            <a href="../../index.html" class="nav-link">About</a>
             <a href="" class="nav-link">Map</a>
-            <a href="" class="nav-link">Zoos</a>
-            <a href="" class="nav-link">Contact us</a>
+            <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
+            <button class="nav-link" id="nav-button">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="footer-container">
@@ -77,7 +78,32 @@
             <p class="footer-author footer-author-2"> ©RSSchool and ©Yem Digital 2021</p>
         </div>
     </footer>
-    <script src="../main/script.js"></script>
-    <script src="script.js"></script>
+
+    <!--Contact-us || pop-up-->
+    <section id="contact">
+        <button id="contact-close" class="btn-close">
+        </button>
+        <h2 id="contact-title">contact us</h2>
+        <form id="contact-form" action="">
+            <div id="contact-card">
+                <h3 id="contact-card__subtitle">Name</h3>
+                <p class="text-error" id="contact-card__text-1">Write your name here!</p>
+                <input type="text" id="contact-card__input" class=" contact-card__input-1">
+            </div>
+            <div id="contact-card">
+                <h3 id="contact-card__subtitle">Email</h3>
+                <p class="text-error" id="contact-card__text-2">Write your email here!</p>
+                <input type="text" id="contact-card__input" class="contact-card__input-2">
+            </div>
+            <div id="contact-card">
+                <h3 id="contact-card__subtitle">Your Message</h3>
+                <p class="text-error" id="contact-card__text-3">Write something message here!</p>
+                <input type="text" id="contact-card__input-big">
+            </div>
+        </form>
+        <button id="contact-btn" class="send-btn">send</button>
+    </section>
+
+    <script type="module" src="../../script.js"></script>
 </body>
 </html>
