--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
             <a href="" class="nav-link">About</a>
             <a href="./pages/map/index.html" class="nav-link">Map</a>
             <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="nav-button">Contact us</button>
+            <button class="nav-link" id="contact-open__header">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="header-container">
             <input type="text" class="header-container__input">
             <button class="header-container__search"></button>
-            <button class="header-container__login">log in</button>
-            <button class="header-container__signup">sign up</button>
+            <button id="login-open" class="header-container__login">log in</button>
+            <button id="signup-open" class="header-container__signup">sign up</button>
         </div>
     </header>
     <main class="main">
         <section class="hero">
             <div class="hero-container">
-                <h1 class="hero__title">Watch your favorite <span class="hero__title-span">animals online</span></h1>
-                <p class="hero__text">Observe different animals from around the world online in live time. Help vulunteers to take a good care of animals, donate to your favorite ones.</p>
-                <a href="" class="hero__link">Watch now</a>
+                <h1 class="hero-title">Watch your favorite <span class="hero-title__span">animals online</span></h1>
+                <p class="hero-text">Observe different animals from around the world online in live time. Help vulunteers to take a good care of animals, donate to your favorite ones.</p>
+                <a href="./pages/map/index.html" class="hero-link">Watch now</a>
             </div>
             <div class="hero-image">
                 <img src="./assets/images/Panda.png" alt="Panda">
-                <a class="hero-image__link" href="">
+                <a class="hero-image__link" href="./pages/zoos-pandas/index.html">
                     <img src="./assets/icons/Frame.svg" alt="watch">
                 </a>
             </div>
@@ -213,7 +213,7 @@
             <a href="" class="nav-link">About</a>
             <a href="./pages/map/index.html" class="nav-link">Map</a>
             <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="nav-button">Contact us</button>
+            <button class="nav-link" id="contact-open__footer">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="footer-container">
@@ -327,6 +327,102 @@
         <div id="donate-ps">
             <img src="./assets/icons/protect.svg" alt="">
             <p id="donate-ps__text">Your payment is protected</p>
+        </div>
+    </section>
+
+    <section id="signup" class="register">
+        <button id="signup-close" class="btn-close"></button>
+        <div class="register-header">
+            <div class="logo">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="./assets/icons/logo.svg" class="logo-icon">
+                </div>
+            </div>
+        </div>
+        <div class="register-main">
+            <div class="register-togglers">
+                <button class="register-togglers__btn register-togglers__btn-dark">Create account</button>
+                <button id="right-toggler" class="register-togglers__btn register-togglers__btn-light">Log in</button>
+            </div>
+            <div class="register-loginThrough">
+                <button class="register-loginThrough__btn">
+                    <img src="./assets/icons/google.svg" alt="">
+                    Google Sign in    
+                </button>
+                <button class="register-loginThrough__btn">
+                    <img src="./assets/icons/facebook.svg" alt="">
+                    Facebook Sign in   
+                </button>
+            </div>
+            <div class="register-container">
+                <div class="register-card">
+                    <h2 class="register-card__subtitle">Name</h2>
+                    <p class="text-error" id="signupErrText-1">Write your name!</p>
+                    <input type="text" id="signup-input-1" class="register-card__input">
+                </div>
+                <div class="register-card">
+                    <h2 class="register-card__subtitle">Email</h2>
+                    <p class="text-error" id="signupErrText-2">Write your email!</p>
+                    <input type="text" id="signup-input-2" class="register-card__input">
+                </div>
+                <div class="register-card">
+                    <h2 class="register-card__subtitle">Password</h2>
+                    <p class="text-error" id="signupErrText-3">Password length must be more than 6 characters</p>
+                    <input type="text" id="signup-input-3" class="register-card__input">
+                </div>
+            </div>
+            <div class="register-agreement">
+                <input type="checkbox" class="register-agreement__checkbox" id="signup-checkbox">
+                <p class="register-agreement__text" id="signupErrUnderline">
+                    Agree with the <a href="" class="register-agreement__text-link">User Agreement</a> 
+                    and <a href="" class="register-agreement__text-link">Policy</a>
+                </p>
+            </div>
+            <button id="signup-send" class="send-btn">send</button>
+        </div>
+    </section>
+
+    <section id="login" class="register">
+        <button id="login-close" class="btn-close"></button>
+        <div class="register-header">
+            <div class="logo">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="./assets/icons/logo.svg" class="logo-icon">
+                </div>
+            </div>
+        </div>
+        <div class="register-main">
+            <div class="register-togglers">
+                <button id="left-toggler" class="register-togglers__btn register-togglers__btn-light">Create account</button>
+                <button class="register-togglers__btn register-togglers__btn-dark">Log in</button>
+            </div>
+            <div class="register-loginThrough">
+                <button class="register-loginThrough__btn">
+                    <img src="./assets/icons/google.svg" alt="">
+                    Google Sign in    
+                </button>
+                <button class="register-loginThrough__btn">
+                    <img src="./assets/icons/facebook.svg" alt="">
+                    Facebook Sign in   
+                </button>
+            </div>
+            <div class="register-container">
+                <div class="register-card">
+                    <h2 class="register-card__subtitle">Email</h2>
+                    <p class="text-error" id="loginErrText-1">Write your email!</p>
+                    <input type="text" id="login-input-1" class="register-card__input">
+                </div>
+                <div class="register-card">
+                    <h2 class="register-card__subtitle">Password</h2>
+                    <p class="text-error" id="loginErrText-2">Write your Password!</p>
+                    <input type="text" id="login-input-2" class="register-card__input">
+                </div>
+            </div>
+            <button id="login-send" class="send-btn login-btn">send</button>
         </div>
     </section>
 
