--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -22,7 +22,7 @@
             <a href="../../index.html" class="nav-link">About</a>
             <a href="" class="nav-link">Map</a>
             <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="nav-button">Contact us</button>
+            <button class="nav-link" id="contact-open__header">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="header-container">
@@ -70,7 +70,7 @@
             <a href="../../index.html" class="nav-link">About</a>
             <a href="" class="nav-link">Map</a>
             <a href="../zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="nav-button">Contact us</button>
+            <button class="nav-link" id="contact-open__footer">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
         </nav>
         <div class="footer-container">
