--- a/index.html
+++ b/index.html
@@ -12,43 +12,54 @@
 </head>
 
 <body id="body">
-    <header class="header">
-        <a class="logo" href="">
-            <p class="logo-title">online</p>
-            <div class="logo-container">
-                <p class="logo-title">Z</p>
-                <img src="./assets/icons/logo.svg" class="logo-icon">
+    <section class="header-hero">
+        <header class="header">
+            <a class="logo" href="">
+                <p class="logo-title">online</p>
+                <div class="logo-container">
+                    <p class="logo-title">Z</p>
+                    <img src="./assets/icons/logo.svg" class="logo-icon">
+                </div>
+            </a>
+            <nav class="nav header-nav">
+                <a href="" class="nav-link">About</a>
+                <a href="./pages/map/index.html" class="nav-link">Map</a>
+                <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                <button class="nav-link" id="contact-open__header">Contact us</button>
+                <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
+            </nav>
+            <div class="header-container">
+                <input type="text" class="header-container__input">
+                <button class="header-container__search"></button>
+                <button id="login-open" class="header-container__login">log in</button>
+                <button id="signup-open" class="header-container__signup">sign up</button>
+                <button id="menu-open" class="header-container__btn"></button>
             </div>
-        </a>
-        <nav class="nav">
-            <a href="" class="nav-link">About</a>
-            <a href="./pages/map/index.html" class="nav-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
-            <button class="nav-link" id="contact-open__header">Contact us</button>
-            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
-        </nav>
-        <div class="header-container">
-            <input type="text" class="header-container__input">
-            <button class="header-container__search"></button>
-            <button id="login-open" class="header-container__login">log in</button>
-            <button id="signup-open" class="header-container__signup">sign up</button>
-        </div>
-    </header>
-    <main class="main">
+        </header>
+        <section class="menu">
+            <a href="" class="menu-link">About</a>
+            <a href="./pages/map/index.html" class="menu-link">Map</a>
+            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <button class="menu-link" id="contact-open__menu">Contact us</button>
+            <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
+            <button class="menu-link" id="login-open-2">my account</button>
+        </section>
         <section class="hero">
             <div class="hero-container">
                 <h1 class="hero-title">Watch your favorite <span class="hero-title__span">animals online</span></h1>
                 <p class="hero-text">Observe different animals from around the world online in live time. Help vulunteers to take a good care of animals, donate to your favorite ones.</p>
                 <a href="./pages/map/index.html" class="hero-link">Watch now</a>
             </div>
-            <div class="hero-image">
-                <img src="./assets/images/Panda.png" alt="Panda">
-                <a class="hero-image__link" href="./pages/zoos-pandas/index.html">
-                    <img src="./assets/icons/Frame.svg" alt="watch">
-                </a>
-            </div>
-            <h2 class="how">How it works</h2>
+                <div class="hero-image">
+                    <img class="hero-image__img" src="./assets/images/Panda.png" alt="Panda">
+                    <a class="hero-image__link" href="./pages/zoos-pandas/index.html">
+                        <img src="./assets/icons/Frame.svg" alt="watch">
+                    </a>
+                </div>
+                <h2 class="how">How it works</h2>
         </section>
+    </section>
+    <main class="main">
         <section class="about">
             <div class="about-container">
                 <div class="about-card">
@@ -69,9 +80,7 @@
                 <p class="about-container__text">Support animals with the donations</p>
             </div>
         </section>
-        <section>
-            <img src="./assets/images/Illustrations-1.png" class="bg-image" alt="bg-image">
-        </section>
+        <section class="illustration"></section>
         <section class="pets">
             <h2 class="pets-title">Pets in zoo</h2>
             <button class="pets-button">Choose your Favorite</button>
@@ -141,17 +150,17 @@
         <section class="pay">
             <h2 class="pay-title">Pay and feed</h2>
             <button id="donate-open" class="pay-button">Donate to volunteers</button>
-            <div class="pay-container">
+            <div class="pay-container pay-container-1">
                 <div class="pay-container__circle pay-container__circle-1"></div>
                 <p class="pay-container__text">You donate to your favourite animals</p>
             </div>
             <img src="./assets/images/arrow.svg" alt="" class="pay-arrow">
-            <div class="pay-container">
+            <div class="pay-container pay-container-2">
                 <div class="pay-container__circle pay-container__circle-2"></div>
                 <p class="pay-container__text">Zoo Keepers feed animals with their favourite food</p>
             </div>
             <img src="./assets/images/arrow.svg" alt="" class="pay-arrow">
-            <div class="pay-container">
+            <div class="pay-container pay-container-3">
                 <div class="pay-container__circle pay-container__circle-3"></div>
                 <p class="pay-container__text">Animals are healthy and happy</p>
             </div>
@@ -202,14 +211,14 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="">
+        <a class="logo footer-logo" href="">
             <p class="logo-title">online</p>
             <div class="logo-container">
                 <p class="logo-title">Z</p>
                 <img src="./assets/icons/logo.svg" class="logo-icon">
             </div>
         </a>
-        <nav class="nav">
+        <nav class="nav footer-nav">
             <a href="" class="nav-link">About</a>
             <a href="./pages/map/index.html" class="nav-link">Map</a>
             <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
@@ -425,6 +434,7 @@
             <button id="login-send" class="send-btn login-btn">send</button>
         </div>
     </section>
+    <section class="substrate"></section>
 
     <script type="module" src="script.js"></script>
 </body>
