--- a/pages/map/index.html
+++ b/pages/map/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
+    <link rel="stylesheet" href="../../assets/others/media/media.css">
 </head>
 <body>
     <section class="header-hero">
