--- a/pages/zoos-eagles/index.html
+++ b/pages/zoos-eagles/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
+    <link rel="stylesheet" href="../../assets/others/media/media.css">
 </head>
 
 <body>
